--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -21,7 +21,6 @@
   .outer-container {
     height: 100%;
     min-width: 300px;
-    overflow: hidden;
   }
 
   .main-content-container {
